[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core",
    "networkx",
    "matplotlib"
]

[project.scripts]
run-test = "test:entrypoint"

[tool.uv.sources]
core = {workspace = true}

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"