[project]
name = "coordinator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core",
    "assembler",
    "converter",
    "dispatcher"
]

[tool.uv.sources]
core = {workspace = true}
assembler = {workspace = true}
converter = {workspace = true}
dispatcher = {workspace = true}


[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"